# workspec

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/skills/go/: SKILL.md  audit-workflow.js
docs/: voice-learning-v2.md
examples/: bad_status_update.md  demo.py  good_status_update.md  status_update.yaml
rubrics/: ai_delegation_brief.yaml  decision_memo.yaml
skill/: SKILL.md
skill/references/: checking.md  cli.md  learning.md
tests/: conftest.py  helpers.py  test_capability.py  test_capability_knobs.py  test_cli.py  test_cli_capability.py  test_cli_context.py  test_compose.py  test_compose_capability.py  test_context.py  test_context_seam.py  test_contract.py  test_contract_extractor.py  test_contract_scenario.py  test_draft.py  test_engine.py  test_env.py  test_integration_backends.py  test_learning_contradiction.py  test_learning_decay.py  test_learning_negative.py  test_learning_promotion.py  test_learning_recurrence.py  test_learning_scenarios.py  test_learning_semantic.py  test_models.py  test_ollama_integration.py  test_package.py  test_profile.py  test_providers.py  test_render.py  test_spec_loader.py  test_store.py
workspec/: __init__.py  _base.py  capability.py  cli.py  compose.py  context.py  contract.py  contract_extractor.py  draft.py  engine.py  env.py  models.py  profile.py  providers.py  render.py  spec_loader.py  store.py
workspec/learning/: __init__.py  _text.py  contradiction.py  decay.py  negative.py  promotion.py  recurrence.py  semantic.py
workspec/rubrics/: email_reply.yaml
