[project]
name = "workspec"
version = "0.1.0"
description = "An AI-backed work-quality linter — encode what good work looks like, then check any work against it."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MacLeod Labs", email = "steve.g.messina@gmail.com" }]
maintainers = [{ name = "MacLeod Labs" }]
keywords = ["llm", "linter", "quality", "anthropic", "openai", "structured-outputs"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]
# Both providers ship by default — no extra needed to use either backend.
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
]

# Kept as no-op aliases so existing `pip install workspec[openai]` / `[all]`
# invocations keep working; both providers are already in the core deps above.
[project.optional-dependencies]
openai = []
all = []

[project.urls]
Homepage = "https://github.com/macleodlabs-ai/workspec"
Repository = "https://github.com/macleodlabs-ai/workspec"
Issues = "https://github.com/macleodlabs-ai/workspec/issues"

[project.scripts]
workspec = "workspec.cli:main"

# Dev tooling (PEP 735). Install with: uv sync --extra all
# ty is Astral's (uv/ruff team) Rust type checker — much faster than mypy.
[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.1",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["workspec*"]

# Built-in rubrics now live at the top level (rubrics/), not inside the package —
# they are first-class, editable contracts. MANIFEST.in ships them in sdists; the
# loader resolves them at runtime (see workspec/spec_loader.py).

# --- Linting & type checking ------------------------------------------------ #

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["workspec", "examples", "tests"]
extend-exclude = [".venv", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length is handled by the formatter, not enforced as an error
]

[tool.ruff.lint.isort]
known-first-party = ["workspec", "tests"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["T201"]  # prints are fine in example scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ty — Astral's fast type checker (https://docs.astral.sh/ty/). Run with `ty check`.
[tool.ty.environment]
python-version = "3.10"
root = ["workspec", "examples", "tests"]

[tool.ty.rules]
# Conditional `import openai` lives behind an optional extra; don't fail when it
# (or any optional backend) isn't installed.
unresolved-import = "ignore"

# --- Tests ------------------------------------------------------------------ #

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: hits a live model endpoint (Ollama/Anthropic/OpenAI); skipped when unavailable.",
]
